tests/baselines/reference/reactImportUnusedInNewJSXEmit(jsx=react-jsx).errors.txt
index.tsx(3,1): error TS6133: 'React' is declared but its value is never read.


==== index.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from "react";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'React' is declared but its value is never read.
    
    function Bar() {
      return <div />;
    }
    
    export function Foo() {
      return <Bar />;
    }